# Crawsla

./: .gitignore  .mcp.json  README.md  dev.sh
.github/workflows/: deploy.yml  scrape.yml
backend/: package-lock.json  package.json  pyproject.toml
backend/app/: db.py  main.py
backend/scraper/: cli.js  db.js  heycar.js  leboncoin.py  run.py  tesla.js  tesla_scrape.js
frontend/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  Auctions.tsx  Compare.tsx  Dropped.tsx  ListingDetail.tsx  Saved.tsx  Trends.tsx  api.ts  i18n.tsx  index.css  types.ts  useAuth.ts  useSaved.ts  utils.ts
